--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "build:typescript": "npx tsc",
     "run:node": "node build/index.js",
-    "dev": "nodemon --watch src/ -e ts --exec ts-node index.ts",
+    "dev": "nodemon --watch src/ -e ts --exec ts-node src/index.ts",
     "run": "npm run build:typescript && npm run run:node",
     "lint": "eslint src/**/*.ts",
-    "lint-fix": "eslint src/**/*.ts --fix"
+    "lint-fix": "eslint src/**/*.ts --fix",
+    "deploy": "npm run build:typescript && node build/scripts/deploy-commands.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@discordjs/rest": "^1.0.1",
     "discord.js": "^14.2.0",
     "dotenv": "^16.0.1"
   }
