--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "dependencies": {
     "@discordjs/rest": "^1.0.1",
     "discord.js": "^14.2.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.5.6",
+    "typedi": "^0.10.0"
   }
 }
