--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "discord.js": "^14.2.0",
     "dotenv": "^16.0.1",
     "reflect-metadata": "^0.1.13",
+    "rxdb": "^12.7.16",
     "rxjs": "^7.5.6",
     "typedi": "^0.10.0"
   }
