--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/index.js",
   "scripts": {
     "build:typescript": "npx tsc",
-    "run:node": "node build/index.js",
+    "run:node": "node build/src/index.js",
     "dev": "nodemon --watch src/ -e ts --exec ts-node src/index.ts",
     "run": "npm run build:typescript && npm run run:node",
     "lint": "eslint src/**/*.ts",
