--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@discordjs/rest": "^1.0.1",
+    "axios": "^0.27.2",
     "dexie": "^4.0.0-alpha.4",
     "discord.js": "^14.2.0",
     "dotenv": "^16.0.1",
