--- a/package.json
+++ b/package.json
@@ -28,16 +28,21 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@discordjs/opus": "^0.8.0",
     "@discordjs/rest": "^1.0.1",
     "axios": "^0.27.2",
     "dexie": "^4.0.0-alpha.4",
+    "discord-music-player": "^9.0.2",
     "discord.js": "^14.2.0",
     "dotenv": "^16.0.1",
     "leveldown": "^6.1.1",
+    "node": "^16.16.0",
+    "node-opus": "^0.3.3",
     "pouchdb-adapter-leveldb": "^7.3.0",
     "reflect-metadata": "^0.1.13",
     "rxdb": "^12.7.16",
     "rxjs": "^7.5.6",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "ytdl-core": "^4.11.0"
   }
 }
