--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
     "rxdb": "^12.7.16",
     "rxjs": "^7.5.6",
     "typedi": "^0.10.0",
-    "ytdl-core": "^4.11.0"
+    "ytdl-core": "4.10.0"
   }
 }
