--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "yahoo-finance2": "^2.3.6"
   },
   "dependencies": {
     "@discordjs/opus": "^0.8.0",
